--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-		<link rel="icon" type="image/x-icon" href="img/gamepadpic.jpeg" />
-		<link rel="apple-touch-icon" href="img/gamepadpic.jpeg">
+		<link rel="icon" type="image/x-icon" href="img/gnn.jpg" />
+		<link rel="apple-touch-icon" href="img/gnn.jpg">
 		<link rel="stylesheet" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+		<title>GNN</title>
 		<h1>GNN</h1>
 		<h2>Gaming News Network</h2>
 		<video src="img/vid1.mp4" controls poster="img/img1.jpeg">
