--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 		<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 		<title>GNN</title>
 		<h1>GNN</h1>
-		<h2>Gaming News Network</h2>
-		<video src="img/vid1.mp4" controls poster="img/img1.jpeg">
+		<h3>Gaming News Network</h2>
+		<video controls poster="img1.jpeg">
+			<source src="vid3.mp4">
 		</video>
+		<div class="twitter-follow-button">
+			<a href="https://twitter.com/EPIC_GNN?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-lang="en" data-show-count="false">Follow @EPIC_GNN</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</div>
+		<a class="twitter-timeline" data-link-color="#CB0200" href="https://twitter.com/EPIC_GNN/lists/breaking-news?ref_src=twsrc%5Etfw">A Twitter List by EPIC_GNN</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</head>
 </html>
